[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/flags.gd" type="Script" id=1]
[ext_resource path="res://scenes/usa/USABack.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/fonts/impact.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/fonts/tahoma.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 200
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 34
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 4 )

[node name="flags" type="Node2D"]
script = ExtResource( 1 )

[node name="USABack" parent="." instance=ExtResource( 2 )]

[node name="Button" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 960.0
margin_top = 543.0
margin_right = 1028.0
margin_bottom = 598.0
flat = true

[node name="flagPic" type="Sprite" parent="."]
position = Vector2( 357.715, 270.745 )
scale = Vector2( 0.421389, 0.421389 )

[node name="Num" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 669.629
margin_top = 146.08
margin_right = 923.629
margin_bottom = 391.08
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1

[node name="pageNum" type="Label" parent="."]
margin_left = 488.748
margin_top = 515.12
margin_right = 528.748
margin_bottom = 558.12
custom_fonts/font = SubResource( 3 )
align = 1
valign = 1

[node name="desc" type="Label" parent="."]
margin_left = 183.0
margin_top = 420.0
margin_right = 511.0
margin_bottom = 478.0
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
